# univor

./: .gitignore  README.md  pyproject.toml  sample_output.txt  setup-dev.sh  try_things.ipynb
common/: TUI_pru1.py  __init__.py  app_setup.py  demo.yaml
connectors/: connections_manager.py  hypervisor_interface.py  mock_hypervisor_connector.py
connectors/tests/: test_mock_connector.py
doc/: Anteproyecto Claudio.docx  Engine Ideas.md  Fases desarrollo.md  Ideas orquestador.md
lib/esx-esxobjects/esxobjects/: __init__.py  hypervisor_interface.py  myESXCENTER.py  myESXCONFIG.py  myESXError.py  myESXSERVER.py  myESXTASK.py  myESXVM.py
mock_hypervisor/: __init__.py  cli.py  daemon.py  launcher.py  specs.md
mock_hypervisor/tests/: test_cli.py  test_daemon_logging.py  test_launcher.py  test_rest_api.py
orchestrator/: __init__.py  kk.ipynb  models.py  tree.py
